k8s/Services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
  namespace: app
spec:
  ports:
  - name: 80-3000
    port: 80
    targetPort: 3000
  selector:
    app: app
  type: LoadBalancer
status:
  loadBalancer: {}
