k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "imc-letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "imc.kubernetes.micheldias.com"
    secretName: "imc-letsencrypt-prod" 
  rules:
  - host: imc.kubernetes.micheldias.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 80
